Introduce CommitTransactionPayload.CandidateTransaction
Do not use an Entry but rather a dedicated type, which allows us to
unbox things a bit.

Change-Id: I16e97cbe8aa6e3f4f9543a9f71a95a09191689c0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>